# omdt

./: .gitignore  .pre-commit-config.yaml  OMDT_PRD_v0_3_implementation.md  README.md  alembic.ini  omdt.db  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  nightly.yml  upgrade-validation.yml
app/adapters/: __init__.py  base.py  gamma.py  github.py  linear.py  lovable.py  notion.py  outlook.py  registry.py  render.py  snowflake.py
app/agents/: base.py  registry.py  routing.py  runtime.py
app/api/: deps.py  main.py
app/cli/: _entry.py  access.py  bootstrap.py  config_check.py  main.py  work_items.py
app/core/: audit.py  config.py  events.py  ids.py  logging.py  security.py  tracing.py
app/db/: base.py  session.py
app/domain/: enums.py
app/jobs/: audit_export.py  deployment_jobs.py  linear_sync.py  notification_dispatch.py  notion_sync.py  schedule_sync.py
app/services/: access.py  approvals.py  artifacts.py  conversations.py  costing.py  deployments.py  documentation.py  feedback.py  identities.py  intake.py  pipelines.py  prd.py  sync.py  training.py  triage.py  work_items.py
app/workflows/: engine.py  policies.py  transitions.py
config/: approvals.yaml  linear.schema.yaml  notifications.yaml  omdt.yaml  people.yaml  prompts.yaml  role_bundles.yaml  testing.yaml
docs/: SETUP_AND_HOSTING.md
docs/dbml/: omdt_core.dbml
docs/runbooks/: github-environments.md
prompts/system/: academic_research_agent.md  access_security_agent.md  coding_agent.md  comms_publishing_agent.md  data_analyst.md  data_architect.md  data_engineer.md  data_pm.md  data_pmo.md  data_quality_agent.md  data_scientist.md  deployment_agent.md  head_of_data.md  ml_engineering_agent.md  mlops_agent.md  (+5 more)
scripts/: validate_all.sh
tests/: conftest.py
(+195 files in other folders)
