[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omdt"
version = "0.1.0"
description = "One Man Data Team — a Python-first operating framework that behaves like an in-house data team."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic[email]>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "typer>=0.12",
    "dramatiq[redis]>=1.16",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "yamllint>=1.35",
    "pre-commit>=3.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
omdt = "app.cli.main:cli"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "contract: Contract tests",
    "integration: Integration tests",
    "component: Component tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
